force-app/main/default/objects/Invite__c/Invite__c.object-meta.xml
<CustomObject>
    <description>Tracks invitations to Partner Events</description>
    <label>Invite</label>
    <nameField>
        <displayFormat>PEI-{000000}</displayFormat>
        <label>Invites Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>