force-app/main/default/objects/Invite__c/fields/PartnerEvent__c.field-meta.xml
<CustomField>
    <fullName>PartnerEvent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Partner Event the Contact is invited to</description>
    <label>Partner Event</label>
    <referenceTo>PartnerEvent__c</referenceTo>
    <relationshipLabel>Invites</relationshipLabel>
    <relationshipName>Invites</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>