force-app/main/default/objects/Invite__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the invitation response</description>
    <inlineHelpText>Status of the invitation response</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
                <default>true</default>
                <label>pending</label>
            </value>
            <value>
                <fullName>accepted</fullName>
            </value>
            <value>
                <fullName>declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>